<resources>
    <string name="app_name">IZagro Cadastro</string>
    <string name="title_activity_exibe_usuario">ExibeUsuarioActivity</string>
    <string name="btnadicionar">Adicionar</string>
    <string name="hintdata_nasc">Data Nascimento*</string>
    <string name="hint_email">E-mail*</string>
    <string name="hint_sobrenome">Sobrenome*</string>
    <string name="hint_nome">Nome*</string>
    <string name="data_nasc">Data Nasc:</string>
    <string name="email">Email:</string>
    <string name="sousa_santos">Sousa santos</string>
    <string name="sobrenome">Sobrenome:</string>
    <string name="allef">Allef</string>
    <string name="nome">Nome:</string>
    <string name="atualiza_o_de_cadastro">Atualização de Cadastro</string>
</resources>
