<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context="br.com.developer.allefsousa.izagrocadastro.postUsuario.postUsuarioView"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:text="Atualização de Cadastro"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editUpNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_nome"
        android:inputType="textCapWords"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorhint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/editUpSobrenome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_sobrenome"
        android:inputType="textCapWords"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorhint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUpNome"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/editUpEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorhint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUpSobrenome" />


    <EditText
        android:id="@+id/editUpDatanasc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hintdata_nasc"
        android:inputType="date"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorhint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUpEmail" />

</android.support.constraint.ConstraintLayout>
